# RG165-bethebachelor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RG165_bethebachelor  beTheBachelor  cmake_install.cmake  main  main.c  main.cpp
screenshots/: 2_report.mkv  report_2.webm
src/: .callbackfuncs.cpp.swp  CMakeCache.txt  Makefile  RG165_bethebachelor  boban.cpp  boban.hpp  callbackfuncs.cpp  callbackfuncs.hpp  camera.cpp  camera.hpp  cmake_install.cmake  compiler_error.txt  draw.cpp  draw.hpp  figure.cpp  figure.hpp  functions.cpp  functions.hpp  image.cpp  image.hpp  light.cpp  light.hpp  main.cpp
src/images/: parket.bmp~  parquet.jpg~
